Allow player to be available or not available
